--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Byte-compiled / optimized / DLL files
 __pycache__
+
+# Jupyter Notebook
 .ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
 
 # output
 202*
