--- a/platelet_config.json
+++ b/platelet_config.json
@@ -8,7 +8,7 @@
           "measurements": 3,
           "states": 6,
           "accuracy": 7.5,
-          "prob_not_assign": 0.001,
+          "prob_not_assign": 0.01,
           "max_lost": 5,
           "A": {
             "matrix": [1,0,0,1,0,0,
@@ -33,8 +33,8 @@
                        0,0,0,0,0,1]
           },
           "G": {
-            "sigma": 15.0,
-            "matrix": [0.5,0.5,0.5,1,1,1]
+            "sigma": 150,
+            "matrix": [0.1,0.1,0.1,1,1,1]
 
           },
           "R": {
@@ -49,18 +49,16 @@
       "HypothesisModel":
         {
           "name": "platelet_hypothesis",
-          "hypotheses": ["P_FP", "P_init", "P_term", "P_link", "P_dead"],
+          "hypotheses": ["P_FP", "P_init", "P_term", "P_link"],
           "lambda_time": 5.0,
           "lambda_dist": 3.0,
-          "lambda_link": 10.0,
-          "eta": 1e-10,
+          "lambda_link": 1.0,
+          "eta": 1e-10, 
           "theta_dist": 20.0,
           "theta_time": 5.0,
           "dist_thresh": 40,
           "time_thresh": 2,
-          "apop_thresh": 5,
           "segmentation_miss_rate": 0.1,
-          "apoptosis_rate": 0.001,
           "relax": true
         }
     }
