--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,6 @@ dependencies:
   - ipython
   - jupyter
   - jupyterlab
-  - cython
   - opencv
   - zarr
 # btrack
@@ -25,8 +24,8 @@ dependencies:
   - matplotlib>=3.1.1
   - numpy>=1.17.3
   - scipy>=1.3.1
-  - pip:
-    - btrack
+  #- pip:
+    #- btrack
     # - opencv-python
 
   
