--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 name: platelet-tracking
 channels:
   - conda-forge
-  - menpo
+  - menpo # for pathlib
 dependencies:
   - pandas
   - nd2reader
@@ -16,7 +16,7 @@ dependencies:
   - jupyterlab
   - opencv
   - zarr
-# btrack
+  # - btrack dependencies 
   - python=3.7
   - pip
   - cvxopt>=1.2.0
@@ -24,8 +24,9 @@ dependencies:
   - matplotlib>=3.1.1
   - numpy>=1.17.3
   - scipy>=1.3.1
-  #- pip:
-    #- btrack
-    # - opencv-python
+  - pip:
+    - btrack
+    # - napari
+    - git+https://github.com/napari/napari.git#egg=napari[all]
 
   
